// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render nested 1`] = `
<h1
  className="css-f7cugv"
>
  hello world
</h1>
`;

exports[`styled className prop on styled 1`] = `
<h1
  className="some-class css-dhnrtm"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
<h1
  className="css-ijh7uz"
>
  hello world
</h1>
`;

exports[`styled writes the correct css 1`] = `
".css-ijh7uz{font-size:12px;}
.css-f7cugv{font-size:20px;}.css-f7cugv span{color:blue;}.css-f7cugv span:hover{color:green;}.css-f7cugv span:hover:after{content:'after';}
.css-dhnrtm{font-size:20px;}
html{background:pink;}
.css-7a94q4{font-family:sans-serif;color:yellow;background-color:purple;}"
`;
